New Icons, Grid Nav Z-index issues

--- a/index.html
+++ b/index.html
@@ -25,13 +25,16 @@ layout: home
 	    <a href="mailto:{{site.email}}"> <span class="icon-mail"> </span> {{ site.email }} </a>
 	 </li>
 	 <li> 
-		 <a href="projects"> <span class="icon-briefcase"> </span> Portfolio </a> 
+		 <a href="projects"> <span class="icon-briefcase"> </span> Professional </a> 
 	 </li>
 	 <li> 
-		 <a href="projects"> <span class="icon-clock"> </span> Archives </a> 
+		 <a href="societal"> <span class="icon-globe"> </span> Societal </a> 
 	 </li>
+	 <!-- <li>
+	 <a href="projects"> <span class="icon-clock"> </span> Archives </a>
+</li> -->
 	 <li> 
-		 <a href="http://en.wikipedia.org/wiki/Research_Triangle" target=_blank> <span class="icon-location"> </span> The ∆, North Carolina </a> 
+		 <a href="http://en.wikipedia.org/wiki/Research_Triangle" target=_blank> <span class="icon-map"> </span> Local </a> 
 	 </li>
 	</ul>
 
@@ -46,7 +49,7 @@ layout: home
 	</li>
 	<li>
 		<p>
-			<a href="http://twitter.com/bikeandbuild"target=_blank> @Bike &amp; Build </a>
+			<a href="http://twitter.com/bikebuild"target=_blank> @Bike &amp; Build </a>
 			<br>
 			<strong>Cyclist, Volunteer  </strong>
 		</p>
